# windmill-queue

server/: Cargo.toml  README.md  diesel.toml
server/apalis-board-api/: Cargo.toml
server/apalis-board-api/src/: main.rs
server/entity/: Cargo.toml
server/entity/src/: lib.rs
server/entity/src/entities/: events.rs  mod.rs  prelude.rs
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20240206_165947_create_events.rs
server/scripts/: clean_test_db.sh
server/src/: app.rs  main.rs  task.rs
server/wq_server/: Cargo.toml
server/wq_server/src/: blueprint.rs  configuration.rs  lib.rs  telemetry.rs  utils.rs
server/wq_server/src/app/: db.rs  event.rs  event_locker.rs  locker.rs  mod.rs  queue.rs  queue_events.rs
server/wq_server/src/app/db/: error.rs  migrate.rs  schema.rs
server/wq_server/src/app/db/migrations/2024-02-11-030642_init/: down.sql  up.sql
server/wq_server/src/app/db/models/: queue.rs
server/wq_server/src/app/mqueue/: mod.rs  processor.rs
server/wq_server/src/routes/: demo.rs  events.rs  mod.rs  openapi.rs  status.rs
server/wq_server/src/utils/: error.rs  error_code.rs  tagged_locker.rs
server/wq_server_server/: Cargo.toml
server/wq_server_server/configuration/: dev.yml  test.yml
server/wq_server_server/src/: configuration.rs
server/wq_server_server/tests/integration/: events.rs  helpers.rs  main.rs
server/wq_server_server_sdk/: Cargo.toml  blueprint.ron
server/wq_server_server_sdk/src/: lib.rs
wq-server/: Cargo.toml
wq-server/wq_server/: Cargo.toml
wq-server/wq_server/src/: blueprint.rs  lib.rs  utils.rs
wq-server/wq_server/src/routes/: mod.rs
wq-server/wq_server/src/utils/: pavex.rs
wq-server/wq_server_server/: Cargo.toml
wq-server/wq_server_server/configuration/: base.yml  prod.yml
wq-server/wq_server_server_sdk/: Cargo.toml  blueprint.ron
wq-server/wq_server_server_sdk/src/: lib.rs
