[package]
name = "wq_server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[dependencies]
cargo_px_env = "0.1"
pavex = { version = "0.1.13" }
pavex_cli_client = { version = "0.1.13" }
tracing = "0.1"
serde_json = "1.0.113"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
dashmap = "5.5.3"
chrono = "0.4.33"
thiserror = "1.0.56"
uuid = { version = "1.7.0", features = ["v7"] }
apalis = { version = "0.4.9", features = ["postgres"] }
