[package]
name = "wq_server"
license = "MIT"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[dependencies]
entity = { path = "../entity" }
migration = { path = "../migration" }

cargo_px_env = "0.1"
pavex = { version = "0.1.17" }
pavex_cli_client = { version = "0.1.13" }
tracing = "0.1"
serde_json = "1.0.113"
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.79"
dashmap = "5.5.3"
chrono = "0.4.33"
thiserror = "1.0.56"
apalis = { version = "0.4.9", features = ["postgres", "extensions"] }
ulid = "1.1.2"
utoipa = "4.2.0"
utoipa-swagger-ui = "6.0.0"
sea-orm = { version = "0.12.14", features = ["macros", "runtime-tokio-rustls", "sqlx-postgres", "debug-print"] }
