[package]
name = "wq_server_server"
license = "MIT"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/api.rs"
name = "api"

[dependencies]
anyhow = "1"
pavex = { version = "0.1.17" }
tokio = { version = "1", features = ["full"] }
wq_server_server_sdk = { path = "../wq_server_server_sdk" }
wq_server = { path = "../wq_server" }

# Configuration
dotenvy = "0.15"
figment = { version = "0.10", features = ["env", "yaml"] }
serde = { version = "1", features = ["derive"]}

# Telemetry
tracing = "0.1"
tracing-bunyan-formatter = "0.3"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "registry", "smallvec", "std", "tracing-log"] }
serde_json = "1.0.113"
uuid = { version = "1.7.0", features = ["v7"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
