[package]
name = "wq_server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[dependencies]
cargo_px_env = "0.1"
pavex = { version = "0.1.13" }
pavex_cli_client = { version = "0.1.13" }
tracing = "0.1"

# Configuration
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
