[package]
name = "wq_server"
version = "0.1.0"
edition = "2021"

[[bin]]
path = "src/bin/bp.rs"
name = "bp"

[dependencies]
cargo_px_env = "0.1"
pavex = { version = "0.1.13" }
pavex_cli_client = { version = "0.1.13" }
tracing = "0.1"
serde_json = "1.0.113"

# Configuration
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
tokio = "1.36.0"
anyhow = "1.0.79"
